Created Dockerfile only for build app, and changed the default Dockerfile to run the compiled maven artifact, as usual.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,10 @@ services:
         restart_policy:
           condition: on-failure
 
+  app_build:
+    build:
+      context: .
+      dockerfile: Dockerfile-Build-Application      
+
 networks:
   backend:
