Changed the application.properties to have only the host of redis on the docker container defined by docker-compose. This need to be changed. Added some documentation to the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: urlshortener:latest
     ports:
       - "8080:8080"
-    networks:
-      - backend
+    # networks:
+    #   - backend
     deploy:
       replicas: 2
       update_config:
@@ -14,13 +14,15 @@ services:
         delay: 10s
       restart_policy:
         condition: on-failure
+    depends_on:
+      - redis    
 
   redis:
       image: redis:alpine
       ports:
         - "6379:6379"
-      networks:
-        - backend
+      # networks:
+      #   - backend
       deploy:
         replicas: 2
         update_config:
@@ -34,5 +36,5 @@ services:
       context: .
       dockerfile: Dockerfile-Build-Application      
 
-networks:
-  backend:
+# networks:
+#   backend:
