--- a/Dockerfile-Build-Application
+++ b/Dockerfile-Build-Application
@@ -1,7 +1,7 @@
 FROM maven:3.6-jdk-8-alpine
 
-COPY ./code /application
+RUN mkdir /application
+
 WORKDIR /application
 
-ENTRYPOINT ["mvn"]
-CMD ["clean", "install -DskipTests"]
+ENTRYPOINT ["mvn", "clean", "install"]
